--- a/UserControls/Group/CRUDGroupUC.xaml
+++ b/UserControls/Group/CRUDGroupUC.xaml
@@ -93,15 +93,46 @@
 
 
             <DataGrid Grid.Row="1" x:Name="GroupDataGrid" IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" CanUserResizeColumns="False" AutoGenerateColumns="False">
-                <!--<DataGrid.GroupStyle>
+                <DataGrid.GroupStyle>
+                    <!-- Style for groups at top level. -->
+                    <GroupStyle>
+                        <GroupStyle.ContainerStyle>
+                            <Style TargetType="{x:Type GroupItem}">
+                                <Setter Property="Margin" Value="0,0,0,5"/>
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="{x:Type GroupItem}">
+                                            <Expander IsExpanded="True" BorderThickness="1,1,1,5">
+                                                <Expander.Header>
+                                                    <DockPanel>
+                                                        <TextBlock FontWeight="Bold" Text="{Binding Path=Name}" Margin="0,0,0,0" Width="100"/>
+                                                        <TextBlock Text=" ("/>
+                                                        <TextBlock Text="{Binding ItemCount}"/>
+                                                        <TextBlock Text=" Students)"/>
+                                                    </DockPanel>
+                                                </Expander.Header>
+                                                <Expander.Content>
+                                                    <ItemsPresenter />
+                                                </Expander.Content>
+                                            </Expander>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </GroupStyle.ContainerStyle>
+                    </GroupStyle>
+                    <!-- Style for groups under the top level. -->
                     <GroupStyle>
                         <GroupStyle.HeaderTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=Title}" FontWeight="Bold"/>
+                                <DockPanel Background="LightBlue">
+                                    <TextBlock Text="{Binding Name}" Foreground="Blue" Margin="30,0,0,0" Width="100"/>
+                                    <TextBlock Text="{Binding Path=ItemCount}" Foreground="Blue"/>
+                                </DockPanel>
                             </DataTemplate>
                         </GroupStyle.HeaderTemplate>
                     </GroupStyle>
-                </DataGrid.GroupStyle>-->
+                </DataGrid.GroupStyle>
                 <DataGrid.Columns>
                     <DataGridTemplateColumn Header="Group ID" Width="Auto">
                         <DataGridTemplateColumn.CellTemplate>
@@ -113,7 +144,7 @@
                     <DataGridTemplateColumn Header="Project" Width="Auto">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Title}" />
+                                <TextBlock Text="{Binding Path=Title}" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
@@ -140,6 +171,9 @@
                                     </Button>
                                     <Button  Margin="5 0 0 0" x:Name="deleteBtn" BorderBrush="Transparent" Background="Transparent" Click="deleteBtn_Click">
                                         <Icon:PackIconMaterial Kind="DeleteOutline" Foreground="Red"/>
+                                    </Button>
+                                    <Button  Margin="5 0 0 0" x:Name="detailsBtn" BorderBrush="Transparent" Background="Transparent" Click="detailsBtn_Click">
+                                        <Icon:PackIconMaterial Kind="Details" Foreground="Red"/>
                                     </Button>
                                 </StackPanel>
                             </DataTemplate>
