--- a/splashScreen.xaml
+++ b/splashScreen.xaml
@@ -10,7 +10,7 @@
         AllowsTransparency="True"
         WindowStyle="None"
         Height="450"
-        Width="750"
+        Width="900"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -28,7 +28,7 @@
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="350"></ColumnDefinition>
+                <ColumnDefinition Width="500"></ColumnDefinition>
                 <ColumnDefinition Width="400"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
@@ -41,28 +41,15 @@
                            HorizontalAlignment="Left"
                            Height="50"
                            Width="50"></Image>
-                    <TextBlock x:Name="MyWipedText"
-                               Width="100"
-                               Text="FYP MS"
+                    <TextBlock Width="300"
+                               Text="FYP Management System"
+                               TextWrapping="Wrap"
                                FontSize="28"
                                FontWeight="Bold"
                                HorizontalAlignment="Left"
                                VerticalAlignment="Center"
                                Margin="15 0 0 0">
-                        <TextBlock.Triggers>
-                            <EventTrigger RoutedEvent="TextBlock.Loaded">
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="MyWipedText"
-                                                         Storyboard.TargetProperty="(TextBlock.Width)"
-                                                         To="0.0"
-                                                         Duration="0:0:10"
-                                                         AutoReverse="True"
-                                                         RepeatBehavior="Forever" />
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </EventTrigger>
-                        </TextBlock.Triggers>
+
                     </TextBlock>
                 </WrapPanel>
                 <TextBlock Name="loadingText"
